<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="0dp"
    android:fillViewport="true"
    tools:context="com.fatel.mamtv1.ProgressEventFragment">

<LinearLayout
    android:layout_marginTop="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circular="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fatel.mamtv1.ProgressEventFragment"
    xmlns:card_view="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_below="@+id/selec_btn_block">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/title"
                android:textColor="#222"
                android:textStyle="bold"
                android:textSize="22dp" />


            <com.lylc.widget.circularprogressbar.CircularProgressBar
                android:id="@+id/circularprogressbarE"
                style="@style/Widget.ProgressBar.Holo.CircularProgressBar"
                android:layout_width="200dip"
                android:layout_height="200dip"
                circular:cpb_subtitle="subtitle"
                circular:cpb_title="Title"
                android:layout_gravity="center"
                android:layout_below="@+id/title1"
                android:layout_centerHorizontal="true" />



            <LinearLayout android:id="@+id/accept_block"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/circularprogressbarE"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/acc"
                    android:textColor="#222"
                    android:textSize="18dp" />
                <TextView
                    android:id="@+id/acceptPercent"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="#222"
                    android:textSize="18dp" />
            </LinearLayout>



            <LinearLayout android:id="@+id/cancel_block"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/accept_block"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/can"
                    android:textColor="#222"
                    android:textSize="18dp" />
                <TextView
                    android:id="@+id/cancelPercent"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="#222"
                    android:textSize="18dp" />
            </LinearLayout>





        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:layout_below="@+id/selec_btn_block">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/title2"
                android:textColor="#222"
                android:textStyle="bold"
                android:textSize="22dp" />




            <LinearLayout android:id="@+id/eTime_block"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title2"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ttTimeE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/totalTime"
                    android:textColor="#222"
                    android:textSize="18dp" />
                <TextView
                    android:id="@+id/timeFractionE"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textColor="#222"
                    android:textSize="18dp" />
            </LinearLayout>
            <LinearLayout android:id="@+id/eProgress_block"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eTime_block"
                android:orientation="horizontal">
                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:id="@+id/barTimeE"
                    android:layout_margin="17dp"
                    android:progressDrawable="@drawable/green_progress"/>
            </LinearLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</LinearLayout>